Bug 401726  orphaned moz_places records maybe not being deleted (for mak77@supereva.it, r=dietrich, a=mconnor)